--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdqqsH8ouNwSUn0aONKJW2",
+      "collapsed_sections": [
+        "ahfyxVVVDHCE",
+        "IEwqPxpCCxDp",
+        "JMbfhvzq5qdz"
+      ],
+      "authorship_tag": "ABX9TyPrd/5uA5OhAeA0QIX4x82F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +45,7 @@
       "source": [
         "The Stack Overflow annual survey is a comprehensive study of the global developer community, providing insights into programming languages, technologies, remote work trends, job roles, work environments, educational backgrounds, and other developer demographics. It captures responses from thousands of developers worldwide.\n",
         "\n",
-        "Here, we've used the [Stack Overflow survey's data set for 2019](https://survey.stackoverflow.co/). The size of the raw data set is 88883 records across 85 attributes. After cleaning the data set with Pandas, its size reduced to 88352 records across 24 attributes."
+        "Here, we've used the [Stack Overflow survey's data set for 2019](https://survey.stackoverflow.co/). The size of the raw data set is 88883 records across 85 attributes. After cleaning the data set with Pandas, its size reduced to 86197 records across 33 attributes."
       ],
       "metadata": {
         "id": "aI9nmA4LKjU5"
@@ -4316,6 +4321,18 @@
           "execution_count": 163
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Replacing 'United States' with 'USA' for the sake of typing convenience\n",
+        "data_df['Country'].replace({'United States': 'USA'}, inplace = True)"
+      ],
+      "metadata": {
+        "id": "fL2ydumJ6Nyv"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -12738,7 +12755,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### What are the most commonly used programming languages?"
+        "### What are the most commonly used fullstack technologies?"
       ],
       "metadata": {
         "id": "oPv3AFeZSYiC"
@@ -12856,31 +12873,410 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### How many respondents from the United States and India are job seekers?"
+      ],
+      "metadata": {
+        "id": "A6t3hwTXnCQs"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Hardcoded solution\n",
         "\n",
-        "python_users = df['LanguageWorkedWith'].str.contains('Python').sum()\n",
-        "total_users = df['LanguageWorkedWith'].value_counts().sum()\n",
-        "round(python_users / total_users * 100, 2)"
+        "job_seeker_count = 0\n",
+        "for i in range(1, df.shape[0] + 1):\n",
+        "  if df.loc[i, 'Country'] in ['India', 'USA'] and df.loc[i, 'SeekingJob'] == 'Yes':\n",
+        "    job_seeker_count += 1\n",
+        "job_seeker_count"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pyp9NDibVVWk",
+        "outputId": "1fa1637b-e98e-453e-f7c3-e17f028fdf04"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Separate counts\n",
+        "\n",
+        "df.groupby(['Country', 'SeekingJob']).get_group(('India', 'Yes')).shape[0]  # o/p: 2387\n",
+        "df.groupby(['Country', 'SeekingJob']).get_group(('USA', 'Yes')).shape[0]  # o/p: 2533"
+      ],
+      "metadata": {
+        "id": "60TMaXu47hTQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Another way\n",
+        "\n",
+        "# First filtering only rows have 'India' & 'USA' in 'Country' col, then extracting rows having 'SeekingJob = Yes' and\n",
+        "# finally applying 'shape' property with index 0 to extract final no. of rows\n",
+        "\n",
+        "df[(df['Country'].isin(['India', 'USA']))][df['SeekingJob'] == 'Yes'].shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JX6f_j3YUdNB",
+        "outputId": "2deb6811-e441-4a35-b9eb-685ba3c95208"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-91-a2615e9b8708>:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+            "  df[(df['Country'].isin(['India', 'USA']))][df['SeekingJob'] == 'Yes'].shape[0]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Another way\n",
+        "\n",
+        "tmp_df = df[(df['Country'].isin(['India', 'USA']))]\n",
+        "ans_df = tmp_df.groupby('Country')['SeekingJob'].value_counts()\n",
+        "ans_df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 303
+        },
+        "id": "di81VhC_J_sk",
+        "outputId": "5507c7dd-b71c-4a03-ba3b-2c0b2f5fd04b"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Country  SeekingJob\n",
+              "India    Casually       4845\n",
+              "         Yes            2387\n",
+              "         No              880\n",
+              "USA      Casually      10450\n",
+              "         No             6109\n",
+              "         Yes            2533\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country</th>\n",
+              "      <th>SeekingJob</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">India</th>\n",
+              "      <th>Casually</th>\n",
+              "      <td>4845</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Yes</th>\n",
+              "      <td>2387</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>No</th>\n",
+              "      <td>880</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">USA</th>\n",
+              "      <th>Casually</th>\n",
+              "      <td>10450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>No</th>\n",
+              "      <td>6109</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Yes</th>\n",
+              "      <td>2533</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ans_df.loc['India', 'Yes'] + ans_df.loc['USA', 'Yes']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jeUMNIhTUO0a",
+        "outputId": "beb7c494-b491-4acc-d852-5c755ca2af6c"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Another way\n",
+        "\n",
+        "temp_df = df[(df['Country'].isin(['India', 'USA']))]\n",
+        "temp_df[temp_df['SeekingJob'] == 'Yes'].shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mFMBsOBY11o8",
+        "outputId": "73b20a3f-dc75-4a70-f4be-1378ade2b09a"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The 'get_group()' method can access ONLY a single group from a 'groupby' object. However, multiple groups can be accessed\n",
+        "# at once ITERATIVELY using a for-loop as shown ahead.\n",
+        "\n",
+        "grouped = df.groupby('Country')\n",
+        "countries_to_get = ['USA', 'India']\n",
+        "result = pd.concat([grouped.get_group(country) for country in countries_to_get])  # NOTE this step\n",
+        "result[result['SeekingJob'] == 'Yes'].shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8l5uTlZg4yd1",
+        "outputId": "c792666b-5d96-45ba-c336-eef200763dd7"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Another way\n",
+        "\n",
+        "grouped = df.groupby(['Country', 'SeekingJob'])\n",
+        "grouped.get_group(('India', 'Yes')).shape[0] + grouped.get_group(('USA', 'Yes')).shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5frvSgnDn5gL",
+        "outputId": "a12d1f9c-8690-47d4-e2e5-ae0988ef88d3"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4920"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### How many male developers were using python in India (as per the SOF 2019 survey)?"
+      ],
+      "metadata": {
+        "id": "0cONRyc8UpJy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %%time yields the run time of this soln\n",
+        "%%time\n",
+        "\n",
+        "# Directly extracting ans from df\n",
+        "fltr = (df['LanguageWorkedWith'] == 'Python') & (df['Gender'] == 'Male') & (df['Country'] == 'India') & (df['MainBranch'].str.contains('Developer'))\n",
+        "df.loc[fltr].shape[0]  # o/p: 63"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYQJnSJyiGBP",
+        "outputId": "e5989c2c-afd0-4a49-9a58-67dbf2497908"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 66.8 ms, sys: 1.41 ms, total: 68.2 ms\n",
+            "Wall time: 68 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "63"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Another solution**"
+      ],
+      "metadata": {
+        "id": "WnM5bY2ik5u0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %%timeit runs this cell more than once to calc run time\n",
+        "%%time\n",
+        "\n",
+        "# Creating new frame 'ind_grp' having all 'India' rows\n",
+        "ind_grp = df.groupby('Country').get_group('India')\n",
+        "\n",
+        "# Creating filter 'fltr'\n",
+        "fltr = (ind_grp['LanguageWorkedWith'] == 'Python') & (ind_grp['Gender'] == 'Male') & (ind_grp['MainBranch'].str.contains('Developer'))\n",
+        "\n",
+        "# Applying filter 'fltr' on fram 'ind_grp'\n",
+        "ind_grp[fltr].shape[0]    # o/p: 63"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMcdwoCL8iv0",
-        "outputId": "4842090f-aa94-4c79-dd0f-4dc4602b017d"
+        "outputId": "77fa66c7-d2d9-4564-acd6-c9fa8fe4ab5e"
       },
-      "execution_count": 237,
+      "execution_count": 29,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 26 ms, sys: 0 ns, total: 26 ms\n",
+            "Wall time: 26.5 ms\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "41.52"
+              "63"
             ]
           },
           "metadata": {},
-          "execution_count": 237
+          "execution_count": 29
         }
       ]
     },
