--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -13,8 +13,7 @@
         "A6t3hwTXnCQs",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyMh2YX+RoQU6XudUdK/sMpD",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMh2YX+RoQU6XudUdK/sMpD"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,16 +24,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sarvesh-Prajapati/data-analysis-pandas/blob/main/StackOverflowSurvey2019.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
