--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -5,15 +5,12 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "yEcc9X9lEZdd",
         "ahfyxVVVDHCE",
-        "IEwqPxpCCxDp",
-        "YGJBgbIJ0oRj",
-        "zdblQwixFinC",
-        "oPv3AFeZSYiC",
-        "A6t3hwTXnCQs",
+        "ho5tRcrL70iz",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyMh2YX+RoQU6XudUdK/sMpD"
+      "authorship_tag": "ABX9TyPhwkbLdZg9e128je/asEpy"
     },
     "kernelspec": {
       "name": "python3",
@@ -4539,7 +4536,7 @@
         "# Dropping all 2686 rows from 'data_df'\n",
         "\n",
         "data_df.drop(index = data_df[nan_count_per_row > 10].index, inplace = True)\n",
-        "data_df.shape    # Remaning frame's shape"
+        "data_df.shape    # Remaining frame's shape"
       ],
       "metadata": {
         "colab": {
