--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -10,7 +10,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyNCP36+ALw0KzjZO22NDy6B"
+      "authorship_tag": "ABX9TyP/VEw75Le1ld0DFiVF1urk"
     },
     "kernelspec": {
       "name": "python3",
@@ -18752,21 +18752,21 @@
       "source": [
         "'''Keep this cell underneath penultimate cell for quick file re-loading in case of abrupt session termination'''\n",
         "\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
+        "# import pandas as pd\n",
+        "# import numpy as np\n",
+        "# import matplotlib.pyplot as plt\n",
         "\n",
-        "# Importing the cleaned file\n",
-        "df = pd.read_csv('/content/surveyresults2019_cleaned.csv')\n",
-        "df.set_index('Respondent', inplace = True)   # Values of index column are used to access rows\n",
-        "pd.set_option('display.max_columns', df.shape[1])  # Default no. of cols visible = 20; we want to see all cols here\n",
+        "# # Importing the cleaned file\n",
+        "# df = pd.read_csv('/content/surveyresults2019_cleaned.csv')\n",
+        "# df.set_index('Respondent', inplace = True)   # Values of index column are used to access rows\n",
+        "# pd.set_option('display.max_columns', df.shape[1])  # Default no. of cols visible = 20; we want to see all cols here\n",
         "\n",
-        "# Importing schema file (just in case)\n",
-        "schema_df = pd.read_csv('/content/survey_results_schema_SOF2019.csv')\n",
-        "schema_df.set_index('Column', inplace = True)\n",
+        "# # Importing schema file (just in case)\n",
+        "# schema_df = pd.read_csv('/content/survey_results_schema_SOF2019.csv')\n",
+        "# schema_df.set_index('Column', inplace = True)\n",
         "\n",
-        "# Shortening country names for typing ease\n",
-        "df['Country'] = df['Country'].replace({'United Kingdom': 'UK', 'United States': 'USA', 'Russian Federation' : 'Russia'})"
+        "# # Shortening country names for typing ease\n",
+        "# df['Country'] = df['Country'].replace({'United Kingdom': 'UK', 'United States': 'USA', 'Russian Federation' : 'Russia'})"
       ],
       "metadata": {
         "id": "HGYWHZf6k8R7"
