--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -10,7 +10,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyP/VEw75Le1ld0DFiVF1urk"
+      "authorship_tag": "ABX9TyPe/Im89vnd5Icx6wkAVtMx"
     },
     "kernelspec": {
       "name": "python3",
@@ -18849,8 +18849,7 @@
         "\n",
         "```\n",
         "SYNTAX:\n",
-        "df.pivot_table(data=None, values=None, index=None, columns=None, aggfunc='mean', fill_value=None, margins=False,\n",
-        "margins_name='All', dropna=True, observed=False, sort=True)\n",
+        "df.pivot_table(data=None, values=None, index=None, columns=None, aggfunc='mean', fill_value=None, margins=False,margins_name='All', dropna=True, observed=False, sort=True)\n",
         "```\n",
         "\n",
         "**Params:**\n",
