--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvPzsD+Q3r2Q4pi/Up8LSS"
+      "authorship_tag": "ABX9TyMBRsEGJDqDVneQeEoTrpk5"
     },
     "kernelspec": {
       "name": "python3",
@@ -1678,7 +1678,7 @@
         "df['Date'].dtype.char  # o/p: 'M'\n",
         "df['Date'].dtype.name  # o/p: datetime64[ns]   ;  this is a GENERAL dtype for datetime\n",
         "df['Date'].dtype.str   # o/p: <M8[ns]          ;  this is a SPECIFIC dtype for datetime\n",
-        "df['Date'].dtype.type  # o/p: numpy.datetime64"
+        "df['Date'].dtype.type  # o/p: numpy.datetime64\n"
       ],
       "metadata": {
         "id": "91ZrxGzoWCQq"
