--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -4,7 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPunQb/jxPC6m5P6+5rYfrR"
+      "collapsed_sections": [
+        "yMMRHE5U2xbT",
+        "NdzohW2dXjvu",
+        "_pf1lH9WZF2Q"
+      ],
+      "authorship_tag": "ABX9TyNWeriJrpYv3Xoa9piNvisR"
     },
     "kernelspec": {
       "name": "python3",
@@ -1714,7 +1719,7 @@
       "source": [
         "df['Date'].dtype.char  # o/p: 'M'\n",
         "df['Date'].dtype.name  # o/p: datetime64[ns]   ;  this is a GENERAL dtype for datetime\n",
-        "df['Date'].dtype.str   # o/p: <M8[ns]          ;  this is a SPECIFIC dtype for datetime\n",
+        "df['Date'].dtype.str   # o/p: <M8[ns]   ;  this is a SPECIFIC dtype for datetime\n",
         "df['Date'].dtype.type  # o/p: numpy.datetime64"
       ],
       "metadata": {
