--- a/DateTimeSeriesData.ipynb
+++ b/DateTimeSeriesData.ipynb
@@ -9,7 +9,7 @@
         "NdzohW2dXjvu",
         "_pf1lH9WZF2Q"
       ],
-      "authorship_tag": "ABX9TyP82d5QmJWHbECCM4fupFIl"
+      "authorship_tag": "ABX9TyMrKi9w07iWrQzQaKwFxwkr"
     },
     "kernelspec": {
       "name": "python3",
@@ -1719,11 +1719,21 @@
       "source": [
         "# df['Date'].dtype.char  # o/p: 'M'\n",
         "# df['Date'].dtype.name  # o/p: datetime64[ns]   ;  this is a GENERAL dtype for datetime\n",
-        "# df['Date'].dtype.str   # o/p: <M8[ns]   ;  this is a SPECIFIC dtype for datetime\n",
-        "# df['Date'].dtype.type  # o/p: numpy.datetime64"
+        "# df['Date'].dtype.str   # o/p: <M8[ns]   ;  this is a SPECIFIC dtype for datetime"
       ],
       "metadata": {
         "id": "91ZrxGzoWCQq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# df['Date'].dtype.type  # o/p: numpy.datetime64"
+      ],
+      "metadata": {
+        "id": "KNBa7vVkihTw"
       },
       "execution_count": null,
       "outputs": []
