--- a/RetailStoreInventoryData.ipynb
+++ b/RetailStoreInventoryData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLwMV1Q1Lr4OQw9Ctv4Jb7"
+      "authorship_tag": "ABX9TyP0OP7/Jwt6txZqn8vpuxlN"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +15,19 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Retail Store Inventory Dataset Analysis Using Pandas** -- (Undergoing...)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qmPag1lCRU04"
+      }
+    },
     {
       "cell_type": "markdown",
       "source": [
