--- a/RetailStoreInventoryData.ipynb
+++ b/RetailStoreInventoryData.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0OP7/Jwt6txZqn8vpuxlN"
+      "authorship_tag": "ABX9TyNuAoSOwtTh0lV4qs8yG+3P"
     },
     "kernelspec": {
       "name": "python3",
@@ -1051,7 +1051,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Now that 'Date' column's dtype is of datetime type, we can use '.dt' accessor to extractor year, month, day etc.\n",
+        "# Now that 'Date' column's dtype is of datetime type, we can use '.dt' accessor to extract year, month, day etc.\n",
         "\n",
         "df['SalesYear'] = df['Date'].dt.year\n",
         "df['SalesMonth'] = df['Date'].dt.month_name()"
