--- a/RetailStoreInventoryData.ipynb
+++ b/RetailStoreInventoryData.ipynb
@@ -7,9 +7,10 @@
       "collapsed_sections": [
         "1-MDNnjMFP2d",
         "fcNdvi0V8-JQ",
-        "JXoJUDgRAeYy"
+        "JXoJUDgRAeYy",
+        "2YU_IznhJ5Xu"
       ],
-      "authorship_tag": "ABX9TyNnAfeq1T1HkDS1tbim76nK"
+      "authorship_tag": "ABX9TyNDyVrdk/J5z+OewUMCr3EX"
     },
     "kernelspec": {
       "name": "python3",
@@ -4453,7 +4454,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def calc_revenue(units, price, discount):\n",
+        "def calc_revenue(units, price, discount):      # Fn to calculate revenue\n",
         "  return units * price * round((1 - discount / 100), 2)\n",
         "\n",
         "df_tmp = pd.DataFrame()  # Create a blank frame\n",
@@ -4781,9 +4782,9 @@
           "height": 175
         },
         "id": "hiia-DH3VJ0M",
-        "outputId": "d546aa5d-22a6-4628-b46b-111a58f5b898"
+        "outputId": "2c313b70-3b42-4ef7-95c1-c7b6942f82d3"
       },
-      "execution_count": 260,
+      "execution_count": 261,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4797,7 +4798,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-88590556-ea95-4487-9d88-f9079822bd4b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7da32047-8c80-44b8-84bd-93c632aabbe1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4857,7 +4858,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-88590556-ea95-4487-9d88-f9079822bd4b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7da32047-8c80-44b8-84bd-93c632aabbe1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4909,12 +4910,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-88590556-ea95-4487-9d88-f9079822bd4b button.colab-df-convert');\n",
+              "        document.querySelector('#df-7da32047-8c80-44b8-84bd-93c632aabbe1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-88590556-ea95-4487-9d88-f9079822bd4b');\n",
+              "        const element = document.querySelector('#df-7da32047-8c80-44b8-84bd-93c632aabbe1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4934,8 +4935,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-20e4db20-2c19-45a9-80de-9ca7f4f4c742\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-20e4db20-2c19-45a9-80de-9ca7f4f4c742')\"\n",
+              "<div id=\"df-27a66b2f-f250-4332-8142-1b1917f03cf0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-27a66b2f-f250-4332-8142-1b1917f03cf0')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5054,7 +5055,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-20e4db20-2c19-45a9-80de-9ca7f4f4c742 button');\n",
+              "        document.querySelector('#df-27a66b2f-f250-4332-8142-1b1917f03cf0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -5070,7 +5071,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 260
+          "execution_count": 261
         }
       ]
     },
