--- a/RetailStoreInventoryData.ipynb
+++ b/RetailStoreInventoryData.ipynb
@@ -10,7 +10,7 @@
         "JXoJUDgRAeYy",
         "2YU_IznhJ5Xu"
       ],
-      "authorship_tag": "ABX9TyMl0P2jiUgnLJOFGzP5PI9E"
+      "authorship_tag": "ABX9TyNdG4BF7IRGIf8cqIE0wVAH"
     },
     "kernelspec": {
       "name": "python3",
@@ -5099,8 +5099,8 @@
         "def calc_revenue(units, price, discount):\n",
         "  return units * price * round((1 - discount / 100), 2)\n",
         "\n",
-        "df.pivot_table(index = 'SalesYear',             # Replacing by ['SalesYear', 'Category'] will alter o/p\n",
-        "               columns = df['Date'].dt.quarter,\n",
+        "df.pivot_table(index = 'SalesYear',             # Replacing by ['SalesYear', 'Category'] will yield multi-index o/p\n",
+        "               columns = df['Date'].dt.quarter.rename('Quarter'),\n",
         "               values = 'UnitsSold',\n",
         "               aggfunc = lambda x: calc_revenue(x,         # x iterates over each value of 'UnitsSold' in 'values'\n",
         "                                                df.loc[x.index, 'Price'],\n",
@@ -5112,15 +5112,15 @@
           "height": 175
         },
         "id": "JbHqSxE2Ys4j",
-        "outputId": "00aadb9d-1a4c-4589-a779-6afc7997d4df"
+        "outputId": "0c4e72db-ddbc-4a07-9b9b-d4ea0918b46d"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Date                1           2           3           4\n",
+              "Quarter             1           2           3           4\n",
               "SalesYear                                                \n",
               "2022      61503249.18 61838751.92 62978102.36 62134770.88\n",
               "2023      60897398.27 60970991.95 61749865.01 62270102.60\n",
@@ -5128,7 +5128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1b8da0a7-2f4c-4400-9d80-9a1cd283ee66\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c938eecf-283c-4408-9305-1e0b418b4df1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5146,7 +5146,7 @@
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
-              "      <th>Date</th>\n",
+              "      <th>Quarter</th>\n",
               "      <th>1</th>\n",
               "      <th>2</th>\n",
               "      <th>3</th>\n",
@@ -5188,7 +5188,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b8da0a7-2f4c-4400-9d80-9a1cd283ee66')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c938eecf-283c-4408-9305-1e0b418b4df1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5240,12 +5240,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1b8da0a7-2f4c-4400-9d80-9a1cd283ee66 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c938eecf-283c-4408-9305-1e0b418b4df1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1b8da0a7-2f4c-4400-9d80-9a1cd283ee66');\n",
+              "        const element = document.querySelector('#df-c938eecf-283c-4408-9305-1e0b418b4df1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5265,8 +5265,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-650c0b82-2185-4d0d-92b8-7b39c4b7b71d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-650c0b82-2185-4d0d-92b8-7b39c4b7b71d')\"\n",
+              "<div id=\"df-30459072-7eb8-48b9-b344-ed54782303fc\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30459072-7eb8-48b9-b344-ed54782303fc')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5385,7 +5385,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-650c0b82-2185-4d0d-92b8-7b39c4b7b71d button');\n",
+              "        document.querySelector('#df-30459072-7eb8-48b9-b344-ed54782303fc button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -5397,11 +5397,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"               aggfunc = lambda x: calc_revenue(x, df\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"SalesYear\",\n      \"properties\": {\n        \"dtype\": \"int32\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          2022,\n          2023,\n          2024\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 1,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 34972676.937716186,\n        \"min\": 628142.7754999999,\n        \"max\": 61503249.184,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          61503249.184,\n          60897398.267500006,\n          628142.7754999999\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 2,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 613598.9592292395,\n        \"min\": 60970991.945,\n        \"max\": 61838751.91500001,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          60970991.945,\n          61838751.91500001\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 3,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 868494.9590916013,\n        \"min\": 61749865.0135,\n        \"max\": 62978102.36350001,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          61749865.0135,\n          62978102.36350001\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 4,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 95693.9779823006,\n        \"min\": 62134770.8815,\n        \"max\": 62270102.603,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          62270102.603,\n          62134770.8815\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"                                                df\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"SalesYear\",\n      \"properties\": {\n        \"dtype\": \"int32\",\n        \"num_unique_values\": 3,\n        \"samples\": [\n          2022,\n          2023,\n          2024\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 1,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 34972676.937716186,\n        \"min\": 628142.7754999999,\n        \"max\": 61503249.184,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          61503249.184,\n          60897398.267500006,\n          628142.7754999999\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 2,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 613598.9592292395,\n        \"min\": 60970991.945,\n        \"max\": 61838751.91500001,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          60970991.945,\n          61838751.91500001\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 3,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 868494.9590916013,\n        \"min\": 61749865.0135,\n        \"max\": 62978102.36350001,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          61749865.0135,\n          62978102.36350001\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": 4,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 95693.9779823006,\n        \"min\": 62134770.8815,\n        \"max\": 62270102.603,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          62270102.603,\n          62134770.8815\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 28
         }
       ]
     },
